<resources>
    <string name="app_name">Sports_Buddy</string>
    <string name="create_a_run">Create A Run</string>
    <string name="location">Location</string>
    <string name="speeds">Speeds</string>
    <string name="textview">TextView</string>
    <string name="theme">Theme</string>
    <string name="approximate_duration">Approximate duration</string>
    <string name="description">Description</string>
    <string name="additional_information">Additional Information</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="choose_a_location">Choose a location</string>
    <string name="make_others_want_to_join">Make Others Want To Join</string>
    <string name="RunLength" />
    <string name="title_activity_maps">Map</string>
    <string name="confirm">Confirm</string>
    <string name="textview2">TextView</string>
    <string name="latng" />
    <string name="parking">Parking</string>
    <string name="maximum_number_of_participants">Maximum Number Of Participants</string>
    <string name="send">Send</string>
    <string name="place_to_shower">Place To shower</string>
    <string name="place_to_leave_your_stuff">Place To Leave Your Stuff</string>
    <string name="flexible_start_5_10mn">Flexible Start(5-10mn)</string>
    <string name="place_to_change">Place To Change</string>
    <string name="_1km">1km</string>
    <string name="abed" />
    <string name="textview1">TextView</string>
    <string name="textview22">TextView</string>
    <string name="textview3">TextView</string>

</resources>