<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.sports_buddy.FormActivity">

        <TextView
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/create_a_run"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/title"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/titleedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/datetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/date"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/dateedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:autofillHints=""
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/date"
            android:inputType="date" />

        <TextView
            android:id="@+id/timetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/time"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/timePicker1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:focusable="false"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/locationtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/location"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/locationedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:autofillHints=""
            android:ems="10"
            android:focusable="false"
            android:hint="@string/choose_a_location" />

        <TextView
            android:id="@+id/speedtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/speeds"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinnermax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp" />

        <Spinner
            android:id="@+id/spinnermin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp" />

        <TextView
            android:id="@+id/runtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="Run Length"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/progresstext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/_1km"
            android:textSize="24sp" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:max="50" />

        <TextView
            android:id="@+id/themetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/theme"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinnertheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/durationtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/approximate_duration"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinnerduration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/descriptiontext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textSize="24sp" />


        <EditText
            android:id="@+id/descriptionedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:autofillHints=""
            android:singleLine="false" />

        <TextView
            android:id="@+id/Additional_Information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:text="@string/additional_information"
            android:textSize="24sp" />


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <CheckBox
                android:id="@+id/check1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/flexible_start_5_10mn" />


            <CheckBox
                android:id="@+id/check2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/check1"
                android:layout_marginTop="20dp"
                android:text="@string/place_to_change" />


            <CheckBox
                android:id="@+id/check3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/check2"
                android:layout_marginTop="20dp"
                android:text="@string/place_to_leave_your_stuff" />


            <CheckBox
                android:id="@+id/check4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/check3"
                android:layout_marginTop="20dp"
                android:text="@string/place_to_shower" />


            <CheckBox
                android:id="@+id/check5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/check4"
                android:layout_marginTop="20dp"
                android:text="@string/parking" />


            <EditText
                android:id="@+id/editcheck6"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_below="@+id/check5"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="6dp"
                android:background="@layout/my_edit_text_border"
                android:inputType="number"/>

            <TextView
                android:id="@+id/textcheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/editcheck6"
                android:layout_below="@+id/check5"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:textColor="#000000"
                android:text="@string/maximum_number_of_participants"/>


            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editcheck6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/send" />


        </RelativeLayout>


    </LinearLayout>
</ScrollView>


